--- a/index.html
+++ b/index.html
@@ -1,160 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Ankit Kumar Singh | Cybersecurity Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Ankit Kumar Singh</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-  <div class="logo">Ankit.</div>
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#experience">Experience</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#projects">Work</a></li>
-    <li><a href="#achievements">Achievements</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+<main>
 
-<header class="hero">
-  <h1>Ankit Kumar Singh</h1>
-  <p class="subtitle">
-    Cybersecurity Student • Bug Bounty Hunter • Security Researcher
-  </p>
-  <div class="hero-buttons">
-    <a href="resume.pdf" class="btn" download>Download Resume</a>
-    <a href="#contact" class="btn secondary">Contact</a>
-  </div>
-</header>
+<h1>Ankit Kumar Singh</h1>
+<p class="subtitle">
+Cybersecurity Student | Bug Bounty Hunter | Security Researcher
+</p>
 
-<section id="about">
-  <h2>About</h2>
-  <p>
-    I am a Bachelor of Technology student in Computer Science (Cybersecurity) at
-    <strong>Parul University, Vadodara</strong>.
-    My academic focus includes Information Security, Threat Mitigation,
-    Digital Defense, and Vulnerability Analysis.
-    I actively work on penetration testing, cloud security, and real-world
-    vulnerability research through internships, bug bounty programs,
-    and CTF competitions.
-  </p>
-</section>
+<p>
+B.Tech Computer Science (Cybersecurity) student at Parul University, Vadodara.
+Focused on penetration testing, vulnerability assessment, cloud security,
+and real-world vulnerability research.
+</p>
 
-<section id="experience">
-  <h2>Experience</h2>
+<p>
+<a href="resume.pdf" download>[ Download Resume ]</a>
+</p>
 
-  <div class="card">
-    <h3>Cybersecurity Intern</h3>
-    <span>Hacktify Cyber Security · Feb 2025 – Mar 2025</span>
-    <ul>
-      <li>Performed web application and network vulnerability assessments</li>
-      <li>Conducted penetration testing based on OWASP Top 10 methodologies</li>
-      <li>Analyzed security logs and network traffic for threat detection</li>
-      <li>Assisted in incident response documentation and reporting</li>
-    </ul>
-  </div>
+<hr>
 
-  <div class="card">
-    <h3>Cybersecurity Intern</h3>
-    <span>Edunet Foundation (Remote) · Jan 2025 – Feb 2025</span>
-    <ul>
-      <li>Conducted cloud infrastructure security assessments</li>
-      <li>Developed Python scripts for automated vulnerability scanning</li>
-      <li>Researched emerging cybersecurity threats and mitigation strategies</li>
-      <li>Contributed to cybersecurity awareness and training materials</li>
-    </ul>
-  </div>
-</section>
+<h2>Experience</h2>
 
-<section id="skills">
-  <h2>Skills</h2>
+<p><strong>Cybersecurity Intern</strong> — Hacktify Cyber Security  
+<br>Feb 2025 – Mar 2025</p>
+<ul>
+  <li>Web application and network vulnerability assessments</li>
+  <li>Penetration testing using OWASP Top 10 methodologies</li>
+  <li>Security log and network traffic analysis</li>
+  <li>Incident response documentation</li>
+</ul>
 
-  <div class="skills-grid">
-    <div>
-      <h4>Security</h4>
-      <p>
-        Penetration Testing, Vulnerability Assessment, Threat Analysis,
-        Incident Response, OWASP Top 10
-      </p>
-    </div>
+<p><strong>Cybersecurity Intern</strong> — Edunet Foundation (Remote)  
+<br>Jan 2025 – Feb 2025</p>
+<ul>
+  <li>Cloud infrastructure security assessments</li>
+  <li>Python automation for vulnerability scanning</li>
+  <li>Threat research and mitigation reporting</li>
+  <li>Cybersecurity awareness content creation</li>
+</ul>
 
-    <div>
-      <h4>Tools</h4>
-      <p>
-        Burp Suite, Metasploit, Nmap, Wireshark,
-        OWASP ZAP, Nikto, SQLMap, Hashcat
-      </p>
-    </div>
+<hr>
 
-    <div>
-      <h4>Programming</h4>
-      <p>Python, Bash, SQL, C/C++, JavaScript</p>
-    </div>
+<h2>Skills</h2>
 
-    <div>
-      <h4>Cloud & OS</h4>
-      <p>
-        AWS, Azure, Docker, Linux, Kali Linux,
-        Parrot Security OS, Windows
-      </p>
-    </div>
+<p><strong>Security:</strong> Penetration Testing, Vulnerability Assessment,
+Threat Analysis, Incident Response, OWASP Top 10</p>
 
-    <div>
-      <h4>Cryptography</h4>
-      <p>Encryption Algorithms, Hash Functions, PKI, SSL/TLS</p>
-    </div>
-  </div>
-</section>
+<p><strong>Tools:</strong> Burp Suite, Metasploit, Nmap, Wireshark,
+OWASP ZAP, Nikto, SQLMap, Hashcat</p>
 
-<section id="projects">
-  <h2>Projects & Work</h2>
-  <ul class="clean-list">
-    <li>
-      <strong>Bug Bounty Hunting:</strong>
-      Identified and responsibly disclosed security vulnerabilities
-      in web applications.
-    </li>
-    <li>
-      <strong>CTF Competitions:</strong>
-      Solved challenges in cryptography, web exploitation,
-      forensics, and reverse engineering.
-    </li>
-    <li>
-      <strong>Security Research:</strong>
-      Independent research on emerging cyber threats
-      and exploit techniques.
-    </li>
-  </ul>
-</section>
+<p><strong>Programming:</strong> Python, Bash, SQL, C/C++, JavaScript</p>
 
-<section id="achievements">
-  <h2>Achievements</h2>
+<p><strong>Cloud & OS:</strong> AWS, Azure, Docker, Linux, Kali Linux,
+Parrot Security OS, Windows</p>
 
-  <div class="card">
-    <h3>Security Vulnerability Disclosure</h3>
-    <span>Palo Alto Networks</span>
-    <p>
-      Successfully identified and responsibly reported a security vulnerability
-      on a Palo Alto Networks web asset, following responsible disclosure
-      guidelines. This achievement demonstrates hands-on experience in
-      real-world web security testing and vulnerability assessment.
-    </p>
-  </div>
-</section>
+<p><strong>Cryptography:</strong> Encryption Algorithms, Hash Functions,
+PKI, SSL/TLS</p>
 
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:ankitkrsingh2603@gmail.com">ankitkrsingh2603@gmail.com</a></p>
-  <p>Location: Vadodara, Gujarat, India</p>
-</section>
+<hr>
 
-<footer>
-  <p>© 2025 Ankit Kumar Singh</p>
-</footer>
+<h2>Projects & Work</h2>
+<ul>
+  <li>Bug bounty hunting and responsible vulnerability disclosure</li>
+  <li>CTF challenges (cryptography, web exploitation, forensics)</li>
+  <li>Independent security research on emerging threats</li>
+</ul>
+
+<hr>
+
+<h2>Achievements</h2>
+<ul>
+  <li>
+    <strong>Security Vulnerability Disclosure – Palo Alto Networks</strong><br>
+    Identified and responsibly reported a security vulnerability
+    on a Palo Alto Networks web asset, following responsible
+    disclosure practices.
+  </li>
+</ul>
+
+<hr>
+
+<h2>Certifications</h2>
+<ul>
+  <li>Android Bug Bounty Hunting – Hunt Like a Rat</li>
+  <li>Cryptography and Network Security</li>
+  <li>Introduction to Cybersecurity</li>
+  <li>Diving Deep in Cyber Security</li>
+  <li>Practical Introduction to Cloud Computing</li>
+</ul>
+
+<hr>
+
+<h2>Contact</h2>
+<p>
+Email: <a href="mailto:ankitkrsingh2603@gmail.com">ankitkrsingh2603@gmail.com</a><br>
+Phone: +91 9065250253<br>
+Location: Vadodara, Gujarat, India
+</p>
+
+</main>
 
 </body>
 </html>
