--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Ankit Kumar Singh - Cybersecurity Portfolio">
-    <meta property="og:description" content="Cybersecurity Specialist & Bug Bounty Hunter">
+    <meta property="og:description" content="Security Researcher ||  Bug Bounty Hunter">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourusername.github.io">
     <meta property="og:image" content="assets/images/og-image.png">
@@ -433,6 +433,7 @@
 </body>
 
 </html>
+
 
 
 
